@@ -1,6 +1,7 @@
 from __future__ import division  # confidence high
 from __future__ import with_statement
 
+import math
 import os
 import shutil
 import time
@@ -717,3 +718,27 @@ class TestImageFunctions(PyfitsTestCase):
         assert_equal(hdul[0].header['BITPIX'], -32)
         assert_true('BZERO' not in hdul[0].header)
         assert_true('BSCALE' not in hdul[0].header)
+
+    def test_scale_back(self):
+        """A simple test for #120--the scale_back feature for image HDUs."""
+
+        shutil.copy(self.data('scale.fits'), self.temp('scale.fits'))
+        with pyfits.open(self.temp('scale.fits'), mode='update',
+                         scale_back=True) as hdul:
+            orig_bitpix = hdul[0].header['BITPIX']
+            orig_bzero = hdul[0].header['BZERO']
+            orig_bscale = hdul[0].header['BSCALE']
+            orig_data = hdul[0].data.copy()
+            hdul[0].data[0] = 0
+
+        with pyfits.open(self.temp('scale.fits'),
+                         do_not_scale_image_data=True) as hdul:
+            assert_equal(hdul[0].header['BITPIX'], orig_bitpix)
+            assert_equal(hdul[0].header['BZERO'], orig_bzero)
+            assert_equal(hdul[0].header['BSCALE'], orig_bscale)
+
+            zero_point = int(math.floor(-orig_bzero / orig_bscale))
+            assert_true((hdul[0].data[0] == zero_point).all())
+
+        with pyfits.open(self.temp('scale.fits')) as hdul:
+            assert_true((hdul[0].data[1:] == orig_data[1:]).all())
