@@ -167,7 +167,15 @@ New Features
   ``pyfits.diff`` module powers the new ``fitsdiff`` program installed with
   PyFITS.  After installing PyFITS, run ``fitsdiff --help`` for usage details.
 
-- ``pyfits.open()`` not accepts a ``save_backup`` argument.  If set to
+- ``pyfits.open()`` now accepts a ``scale_back`` argument.  If set to
+  ``True``, this automatically scales the data using the original BZERO and
+  BSCALE parameters the file had when it was first opened, if any, as well as
+  the original BITPIX.  For example, if the original BITPIX were 16, this
+  would be equivalent to calling ``hdu.scale('int16', 'old')`` just before
+  calling ``flush()`` or ``close()`` on the file.  This option applies to all
+  HDUs in the file. (#120)
+
+- ``pyfits.open()`` now accepts a ``save_backup`` argument.  If set to
   ``True``, this automatically saves a backup of the original file before
   flushing any changes to it (this of course only applies to update and append
   mode).  This may be especially useful when working with scaled image data.
@@ -201,6 +209,9 @@ Bug Fixes
   mode, the CHECKSUM/DATASUM are updated and preserved even if the file was
   opened with checksum=False.  This change in behavior prevents checksums from
   being unintentionally removed. (#148)
+
+- Fixed a bug where ``ImageHDU.scale(option='old')`` wasn't working at all--it
+  was not restoring the image to its original BSCALE and BZERO values. (#162)
 
 
 3.0.8 (2012-06-04)
